[package]
version = "3.0.0"
authors = [
    "David Pedersen <david.pdrsn@gmail.com>",
    "Alex Kao <alexkao1439@gmail.com>",
]
categories = ["development-tools"]
description = "Easily compare two JSON values and get great output"
homepage = "https://github.com/b-2u/assert-json-same"
keywords = ["serde_json", "json", "testing"]
license = "MIT"
name = "assert-json-same"
readme = "README.md"
repository = "https://github.com/b-2u/assert-json-same.git"
documentation = "https://docs.rs/assert-json-same"
edition = "2018"

[dependencies]
float-cmp = "0.10.0"
serde_json = "1"
serde = "1"

[dev-dependencies]
version-sync = "0.8"
serde = { version = "1", features = ["derive"] }

[badges]
maintenance = { status = "passively-maintained" }
